kustomize/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson-plans-backend-deployment
  labels:
    app: lesson-plans-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lesson-plans-backend
  template:
    metadata:
      labels:
        app: lesson-plans-backend
    spec:
      volumes:
        - name: lesson-plans-shared-storage
          emptyDir: {}
      containers:
        - name: lesson-plans-backend
          volumeMounts:
            - name: lesson-plans-shared-storage
              mountPath: /pvc
          image: lesson-plans-backend
          command:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          ports:
            - containerPort: 8000
          # envFrom:
          #     - secretRef:
          #         name: lesson-plans-backend-credentials
        - name: lesson-plans-backend-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: lesson-plans-shared-storage
              mountPath: /usr/share/nginx/html
