kustomize/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson-plans-backend
spec:
  selector:
    app: lesson-plans-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: lesson-plans-backend-nginx
spec:
  selector:
    app: lesson-plans-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
